--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: emagueri <emagueri@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/18 01:46:42 by emagueri          #+#    #+#              #
-#    Updated: 2024/03/18 01:58:24 by emagueri         ###   ########.fr        #
+#    Updated: 2024/03/24 17:05:06 by emagueri         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ SRC =	ft_atoi.c \
 OBJ		= $(SRC:.c=.o)
 
 NAME	= philo
-CC		= cc -Wall -Werror -Wextra
+CC		= cc -Wall -Werror -Wextra #-fsanitize=thread
 RM		= rm -f
 
 all:$(NAME)
