--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: emagueri <emagueri@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/18 01:46:42 by emagueri          #+#    #+#              #
-#    Updated: 2024/03/24 15:00:37 by emagueri         ###   ########.fr        #
+#    Updated: 2024/04/03 22:26:42 by emagueri         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,10 +22,10 @@ SRC =	ft_atoi.c \
 OBJ		= $(SRC:.c=.o)
 
 NAME	= philo_bonus
-CC		= cc -Wall -Werror -Wextra #-fsanitize=thread
+CC		= cc -Wall -Werror -Wextra 
 RM		= rm -f
 
-bonus:$(NAME)
+all:$(NAME)
 
 $(NAME):$(OBJ)
 	$(CC) $^ -o $@
